--- a/CheongBit/CheongBit/Views/3_MyPageTab.storyboard
+++ b/CheongBit/CheongBit/Views/3_MyPageTab.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="t7v-MN-GOF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -9,40 +9,40 @@
     </dependencies>
     <scenes>
         <!--My Page View Controller-->
-        <scene sceneID="JYM-jU-7E3">
+        <scene sceneID="CiA-oa-Eag">
             <objects>
-                <viewController id="4ov-Uk-HFR" customClass="MyPageViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hsu-1t-xFf">
+                <viewController id="Gd1-je-Igt" customClass="MyPageViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h6R-G4-qJD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="pEv-x1-bHw"/>
+                        <viewLayoutGuide key="safeArea" id="B7z-T3-3np"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="8Aa-8q-Z4q">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="gearshape" catalog="system" id="lNa-Ot-2qw">
+                    <navigationItem key="navigationItem" id="blJ-H6-2ep">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="gearshape" catalog="system" id="EZi-18-nhQ">
                             <connections>
-                                <segue destination="Ikh-jM-FP0" kind="show" id="EnN-4H-Dgu"/>
+                                <segue destination="aaH-g4-qVD" kind="show" id="Yww-JG-9KU"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fWU-CF-M1l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MNq-na-aWC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1761" y="437"/>
         </scene>
         <!--설정-->
-        <scene sceneID="M38-Vu-ar2">
+        <scene sceneID="0no-3d-pwY">
             <objects>
-                <tableViewController id="Ikh-jM-FP0" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="n1f-yh-jya">
+                <tableViewController id="aaH-g4-qVD" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4H6-BX-KBU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="50" id="Z3x-Hw-G8z">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="50" id="ipj-2r-CHd">
                                 <rect key="frame" x="0.0" y="24.5" width="414" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z3x-Hw-G8z" id="oSj-nd-BpN">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ipj-2r-CHd" id="f3Z-XP-yRB">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
@@ -50,33 +50,33 @@
                         </prototypes>
                         <sections/>
                         <connections>
-                            <outlet property="dataSource" destination="Ikh-jM-FP0" id="rKC-s9-FOz"/>
-                            <outlet property="delegate" destination="Ikh-jM-FP0" id="crQ-mF-GTG"/>
+                            <outlet property="dataSource" destination="aaH-g4-qVD" id="X3y-rI-6Ms"/>
+                            <outlet property="delegate" destination="aaH-g4-qVD" id="L4U-Fp-BJe"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="설정" id="oBu-YD-7Js"/>
+                    <navigationItem key="navigationItem" title="설정" id="A0p-dv-koK"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HNJ-OE-IYe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U9D-Me-ok1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2545" y="437"/>
         </scene>
         <!--마이 페이지-->
-        <scene sceneID="2TU-wM-5V4">
+        <scene sceneID="jGC-GB-gOA">
             <objects>
-                <navigationController storyboardIdentifier="3_MyPageTab" automaticallyAdjustsScrollViewInsets="NO" id="t7v-MN-GOF" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="마이 페이지" image="person.circle" catalog="system" selectedImage="person.circle.fill" id="LUV-h6-2tt"/>
+                <navigationController storyboardIdentifier="3_MyPageTab" automaticallyAdjustsScrollViewInsets="NO" id="kfu-jB-eDY" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="마이 페이지" image="person.circle" catalog="system" selectedImage="person.circle.fill" id="kh7-X4-yaq"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="03f-Ur-OpY">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xy6-kr-3eM">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="4ov-Uk-HFR" kind="relationship" relationship="rootViewController" id="99m-Gm-m3e"/>
+                        <segue destination="Gd1-je-Igt" kind="relationship" relationship="rootViewController" id="aCI-4s-sA6"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ELt-vl-Jol" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RkW-kT-MOb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="832" y="435"/>
         </scene>
